# charbon

./: .env.example  Cargo.toml  README.md  config.yaml
src/: app.rs  main.rs  ui.rs
src/blocks/: blocks.rs  memory.rs  mod.rs  system_info.rs
src/config/: config.rs
src/features/: features.rs  mod.rs  system_info.rs
